# ScintiPix

./: .gitignore  LICENSE  README.md  pixi.toml  test_catalog_only.yaml  test_yaml_update.py
.agent/: AGENTS.md
.agent/docs/: sim_environment.md  timing.md
.agents/: AGENTS.md
.agents/docs/: AUTOFOCUS.md  ENVIRONMENT.md  INPUTS.md  OPTICS.md  OUTPUT.md  OUTPUT_FORMAT.md  WORKFLOWS.md  intensifier.md  sim_output.md  timing.md
.agents/skills/pixi/: SKILL.md
.agents/skills/pydantic/: SKILL.md
analysis/: README.md  events.py  io.py  plotting.py  secondaries.py  spatial.py  timing.py
catalogs/: README.md
catalogs/lenses/: README.md  catalog.yaml
catalogs/scintillators/: README.md
catalogs/scintillators/materials/: CsI-Na.yaml  CsI-Tl.yaml  EJ-276D.yaml  EJ-276G.yaml  EJ-426.yaml  EJ200.yaml  NaI-Tl.yaml
docs/: hdf5_schema.md  intensifier.md  sim_output.md
examples/: README.md
examples/SimulationSetup/: CanonEF50mmf1p0L_example.py  README.md
examples/analysis/imaging/: plotter.py
examples/analysis/plotting/: plot_primaries_toa.py
examples/analysisLite/: README.md  example_support.py  hdf5_event_recoil_analyzer_example.py  hdf5_lite_analyzer_example.py  hdf5_secondary_track_length_analyzer_example.py  hdf5_timing_analyzer_example.py  timepix_tot_map_example.py
examples/autofocus/: README.md  analyze_autofocus_output.py  run_autofocus_with_transport.py
examples/configurations/: loadYAML.py  writeMacro.py
examples/endToEnd/: README.md  end_to_end_example.py
examples/photonTransportation/: README.md  optical_transport_example.py
examples/runSimulation/: README.md  run_simulation_from_yaml.py  run_simulation_in_batch_mode.py
examples/scintillatorCataloging/: EJ276D_example.mac  README.md  scintillator_catalog.py
examples/sourceTiming/: README.md  geant4_source_neutron_timing_example.py
examples/timingAnalysis/: README.md
examples/yamlFiles/: CanonEF50mmf1p0L_example.yaml  EJ200.yaml  EJ200_siemens_50mm.yaml  EJ276D.yaml  README.md  autofocus_siemens_star_50mm.yaml  continuous_neutron_source_timing.yaml  ej426_siemens_50mm.yaml  pulsed_neutron_source_timing.yaml  three_component_timing_example.yaml
legacy/: README.md
legacy/examples/: archived_yaml_loading.py
legacy/examples/SimulationSetup/: CanonEF50mmf1p0L_example.py
legacy/examples/runSimulation/: run_simulation_in_batch_mode.py
legacy/examples/yamlFiles/: three_component_timing_example.yaml
legacy/src/intensifier/: mcp.py  photocathode.py
legacy/src/sensor/: pipeline.py
lenses/: README.md
lenses/smxFiles/: CanonEF50mmf1.0L.smx
lenses/zmxFiles/: CanonEF50mmf1.0L.zmx  Nikkor80-200mmf2.8D.zmx
scintillators/: README.md  catalog.yaml
scintillators/curves/CsI-Na/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/curves/CsI-Tl/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/curves/EJ-276D/: abs_length_cm.csv  scint_spectrum.csv
scintillators/curves/EJ-276G/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/curves/EJ-426/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/curves/EJ200/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/curves/NaI-Tl/: abs_length_cm.csv  rindex.csv  scint_spectrum.csv
scintillators/materials/: EJ-276D.yaml  EJ200.yaml
scripts/: read_binary_output.py
sim/: CMakeLists.txt
sim/apps/: scintipix_main.cc
sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhotonOpticalInterfaceSD.hh  PrimaryGeneratorAction.hh  ResolutionTargetConstruction.hh  RunAction.hh  SimIO.hh  SteppingAction.hh  TrackingAction.hh  config.hh  messenger.hh  seed.hh  structures.hh  utils.hh
sim/macros/: canon50_vis.mac  canon50mmf1.0L.mac  microscope_run.mac  microscope_vis.mac  neutron_gps.mac  siemens_star_vis.mac  test-photon-vis.mac  vis.mac
sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotonOpticalInterfaceSD.cc  PrimaryGeneratorAction.cc  ResolutionTargetConstruction.cc  RunAction.cc  SimIO.cc  SteppingAction.cc  TrackingAction.cc  config.cc  messenger.cc  seed.cc  utils.cc
src/: README.md
src/common/: hdf5_schema.py  hdf5_utils.py  logger.py  utilities.py
src/config/: ConfigIO.py  LensCatalog.py  LensCatalogIO.py  MacroIO.py  ScintillatorCatalog.py  ScintillatorCatalogIO.py  SimConfig.py  defaults.py  macro.py  utilsConfig.py  yaml.py
src/config/models/: intensifier.py  metadata.py  optical.py  scintillator.py  sensor.py  simulation.py  source.py
src/intensifier/: io.py  models.py  phosphor.py  pipeline.py
src/models/: base.py  catalogs.py  geant4runtime.py  intensifier.py  metadata.py  optics.py  scintillator.py  sensor.py  simulation.py  source.py
src/optics/: LensModels.py  OpticalTransport.py  focus.py  io.py  raytrace.py
src/runner/: runSimulation.py
src/sensor/: io.py  models.py  timepix.py
test/: README.md
(+47 files in other folders)
